# grchive_v3

./: .gitignore  BUILD.bazel  WORKSPACE  log
containers/blog/: BUILD.bazel  docker-compose.yml  entrypoint.sh
containers/blog/nginx/: BUILD.bazel  entrypoint.sh  nginx.conf
docs/: GETTING_STARTED.md
pipeline/: README.md  pull_env_variables.sh  pull_env_variables_helper.py
pipeline/deploy/: deploy_landing_page.sh  deploy_wordpress.sh
pipeline/terraform/: README.md  deploy.sh
pipeline/terraform/prod/: main.tf
pipeline/terraform/variables/: .gitignore  deploy.tfvars.tmpl
sandbox/mikebao/auth0_api_test/: BUILD.bazel  main.go
sandbox/mikebao/aws_api_test/: BUILD.bazel  main.go
sandbox/mikebao/azure_api_test/: BUILD.bazel  (+1 more)
sandbox/mikebao/gcloud_api_test/: BUILD.bazel  main.go
sandbox/mikebao/gsuite_api_test/: BUILD.bazel  main.go
sandbox/mikebao/office365_api_test/: BUILD.bazel  main.go
sandbox/mikebao/okta_api_test/: BUILD.bazel  main.go
src/landing_page/: 404.html  BUILD.bazel  README.md  cmmc.html  contact.html  fedramp.html  fsa.html  hipaa.html  index.html  integrations.html  iso27001.html  pci.html  product.html  robots.txt  sitemap.xml  sox.html  team.html
src/landing_page/_data/: blog.yml  enforcers.yml  footer_nav.yml  frameworks.yml  integrations.yml  navigation.yml  ops.yml  services.yml  social.yml  status.yml  team.yml  use_cases.yml
src/landing_page/_data/integration_info/: auth0.yml  aws.yml  azure.yml  bitbucket.yml  cloudflare.yml  gcloud.yml  github.yml  gitlab.yml  gsuite.yml  heroku.yml  ibm.yml  ldap.yml  linode.yml  mariadb.yml  msad.yml  mssql.yml  mysql.yml  office365.yml  okta.yml  oracle.yml  postgresql.yml  vultr.yml
src/landing_page/_includes/: coming_soon.html  cta.html  cta_header.html  cta_standalone.html  enforcer.html  footer.html  framework_chip.html  framework_info.html  integration.html  integration_info.html  large_info.html  latest_blog_posts.html  navigation.html  relevant_integrations.html  status_chip.html  supported_data.html  supported_services.html  supported_versions.html  team_profile.html  use_cases.html
src/landing_page/_includes/structures/: cmmc.html  fedramp.html  hipaa.html  internal.html  iso27001.html  pci.html
src/landing_page/_layouts/: default.html
src/landing_page/_sass/: blog.scss  contact.scss  cta.scss  footer.scss  icon.scss  info.scss  integrations.scss  main.scss  operations.scss  product.scss  services.scss  structures.scss  team.scss
src/landing_page/assets/css/: styles.scss
src/landing_page/integrations/: auth0.html  aws.html  azure.html  bitbucket.html  cloudflare.html  gcloud.html  github.html  gitlab.html  gsuite.html  heroku.html  ibm.html  ldap.html  linode.html  mariadb.html  msad.html  mssql.html  mysql.html  office365.html  okta.html  oracle.html  postgresql.html  vultr.html
src/landing_page/nginx/: entrypoint.sh  nginx.conf
src/shared/golang/etl/connectors/databases/mysql/v8/: BUILD.bazel  factory.go  users.go
src/shared/golang/etl/connectors/iam/ldap/: BUILD.bazel  connector.go  users.go
src/shared/golang/etl/connectors/saas/gsuite/: BUILD.bazel  connector.go  users.go
src/shared/golang/utility/auth/: BUILD.bazel  auth0.go  aws.go  azure.go  bitbucket.go  cloudflare.go  github.go  gitlab.go  google.go  gsuite.go  heroku.go  ldap.go  linode.go  oauth.go  okta.go  pem.go  vultr.go
src/shared/golang/utility/http/: BUILD.bazel  client.go  client_interface.go  oauth2.go
tests/: README.md
tests/shared/golang/etl/connectors/: BUILD.bazel  source_test.go
tests/shared/golang/etl/connectors/databases/: BUILD.bazel  sqlx_test.go
tests/shared/golang/etl/connectors/databases/mariadb/: BUILD.bazel  connector_test.go  mariadb_db.go  users_test.go
tests/shared/golang/etl/connectors/databases/mssql/: BUILD.bazel  connector_test.go  mssql_db.go  users_test.go
tests/shared/golang/etl/connectors/databases/mysql/: BUILD.bazel  connector_test.go  mysql_db.go
tests/shared/golang/etl/connectors/databases/mysql/v5/: BUILD.bazel  factory_test.go  users_test.go
tests/shared/golang/etl/connectors/databases/mysql/v8/: BUILD.bazel  factory_test.go  users_test.go
tests/shared/golang/etl/connectors/databases/oracle/: BUILD.bazel  connector_test.go  oracle_db.go  users_test.go
tests/shared/golang/etl/connectors/databases/psql/: BUILD.bazel  connector_test.go  psql_db.go  users_test.go
tests/shared/golang/etl/connectors/iaas/aws/: BUILD.bazel  connector_test.go  mock_aws.go  users_test.go
tests/shared/golang/etl/connectors/iaas/azure/: BUILD.bazel  connector_test.go  mock_azure.go  users_test.go
tests/shared/golang/etl/connectors/iaas/gcloud/: BUILD.bazel  connector_test.go  users_test.go
tests/shared/golang/etl/connectors/iaas/linode/: BUILD.bazel  connector_test.go  mock_linode.go  users_test.go
tests/shared/golang/etl/connectors/iaas/vultr/: BUILD.bazel  connector_test.go  mock_vultr.go  users_test.go
tests/shared/golang/etl/connectors/iam/auth0/: BUILD.bazel  connector_test.go  mock_auth0.go  users_test.go
tests/shared/golang/etl/connectors/iam/ldap/: BUILD.bazel  connector_test.go  mock_ldap.go  users_test.go
tests/shared/golang/etl/connectors/iam/okta/: BUILD.bazel  connector_test.go  mock_okta.go  users_test.go
tests/shared/golang/etl/connectors/paas/heroku/: BUILD.bazel  connector_test.go  mock_heroku.go  users_test.go
tests/shared/golang/etl/connectors/saas/bitbucket/: BUILD.bazel  connector_test.go  mock_bitbucket.go  users_test.go
tests/shared/golang/etl/connectors/saas/cloudflare/: BUILD.bazel  connector_test.go  mock_cloudflare.go  users_test.go
tests/shared/golang/etl/connectors/saas/gcloud/: BUILD.bazel  mock_gcloud.go  users_test.go
tests/shared/golang/etl/connectors/saas/github/: BUILD.bazel  connector_test.go  mock_github.go  users_test.go
tests/shared/golang/etl/connectors/saas/gitlab/: BUILD.bazel  connector_test.go  mock_gitlab.go  users_test.go
tests/shared/golang/etl/connectors/saas/gsuite/: BUILD.bazel  connector_test.go  mock_gsuite.go  users_test.go
tests/shared/golang/utility/auth/: BUILD.bazel  aws_test.go
(+114 files in other folders)
