package(default_visibility=["//visibility:public"])
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

genrule(
    name = "nginx-config",
    srcs = ["nginx.conf"],
    outs = [
        "etc/nginx/nginx.conf"
    ],
    cmd = "cp $< $@"
)

container_image(
    name = "latest",
    base = "//:nginx-install-certbot",
    files = [
            ":nginx-config",
            "entrypoint.sh",
    ],
    data_path = ".",
    entrypoint = "exec /entrypoint.sh",
)
