package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "bin",
    srcs = glob([
        "*.go",
    ]),
    deps = [
        "//src/shared/golang/etl/connectors/iam/auth0:lib",
        "@org_golang_x_oauth2//:go_default_library",
        "//src/shared/golang/utility/auth:lib",
    ],
)
