package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "bin",
    srcs = glob([
        "*.go",
    ]),
    deps = [
        "@org_golang_google_api//cloudresourcemanager/v1:go_default_library",
        "@org_golang_google_api//iam/v1:go_default_library",
        "//src/shared/golang/etl/connectors/iaas/gcloud:lib",
        "//src/shared/golang/utility/auth:lib",
    ],
)
