package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "bin",
    srcs = glob([
        "*.go",
    ]),
    deps = [
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
        "@org_golang_google_api//admin/directory/v1:go_default_library",
        "//src/shared/golang/etl/connectors/saas/gsuite:lib",
        "//src/shared/golang/utility/http:lib",
    ],
)
