package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v3/shared/utility/auth",
    deps = [
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
        "@org_golang_x_oauth2//gitlab:go_default_library",
        "@org_golang_x_oauth2//jwt:go_default_library",
        "@com_github_lestrrat_go_jwx//jwa:go_default_library",
        "@com_github_lestrrat_go_jwx//jwt:go_default_library",
        "//src/shared/golang/utility/http:lib",
        "//src/shared/golang/utility/time:lib",
    ],
)
