package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v3/shared/utility/http",
    deps = [
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

