package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "source_test",
    srcs = ["source_test.go"],
    deps = [
        "//src/shared/golang/etl/connectors:lib",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
