package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "sqlx_test",
    srcs = ["sqlx_test.go"],
    deps = [
        "//src/shared/golang/etl/connectors/databases:lib",
        "//src/shared/golang/test_utility:lib",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
