package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v3/shared/etl/connectors/iam/ldap",
    deps = [
        "//src/shared/golang/etl/connectors:lib",
        "//src/shared/golang/etl/types:lib",
        "@com_github_go_ldap_ldap_v3//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
