package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v3/shared/etl/connectors/saas/gsuite",
    deps = [
        "//src/shared/golang/etl/connectors:lib",
        "//src/shared/golang/etl/types:lib",
        "//src/shared/golang/utility/http:lib",
        "@org_golang_x_net//context:go_default_library",
    ],
)
