package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mssql_utility",
    srcs = [
        "mssql_db.go",
    ],
    importpath = "gitlab.com/grchive/grchive-v3/tests/shared/etl/connectors/databases/mssql_utility",
    deps = [
        "@com_github_denisenkom_go_mssqldb//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//:go_default_library",
        "@com_github_testcontainers_testcontainers_go//wait:go_default_library",
    ],
)

go_test(
    name = "connector_test",
    srcs = ["connector_test.go"],
    deps = [
        "//src/shared/golang/test_utility:lib",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
    embed = [
        "//src/shared/golang/etl/connectors/databases/mssql:lib",
    ],
)

go_test(
    name = "users_test",
    srcs = ["users_test.go" ],
    deps = [
        "//src/shared/golang/test_utility:lib",
        "//src/shared/golang/etl/connectors/databases:lib",
        "//src/shared/golang/etl/types:lib",
        ":mssql_utility",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
    embed = [
        "//src/shared/golang/etl/connectors/databases/mssql:lib",
    ],
)
