package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gcloud_utility",
    srcs = [
        "mock_gcloud.go",
    ],
    importpath = "gitlab.com/grchive/grchive-v3/tests/shared/etl/connectors/iaas/gcloud_utility",
    deps = [
    ],
)

go_test(
    name = "users_test",
    srcs = ["users_test.go"],
    deps = [
        "@com_github_onsi_gomega//:go_default_library",
        "//src/shared/golang/etl/types:lib",
        "//src/shared/golang/test_utility:lib",
        ":gcloud_utility",
    ],
    embed = [
        "//src/shared/golang/etl/connectors/iaas/gcloud:lib",
    ],
)

go_test(
    name = "connector_test",
    srcs = ["connector_test.go"],
    deps = [
        "@com_github_onsi_gomega//:go_default_library",
    ],
    embed = [
        "//src/shared/golang/etl/connectors/iaas/gcloud:lib",
    ],
)
