package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "lib",
    srcs = glob([
        "*.go",
    ]),
    importpath = "gitlab.com/grchive/grchive-v3/shared/etl/connectors/databases/mysql/v8",
    deps = [
        "@com_github_jmoiron_sqlx//:go_default_library",
        "//src/shared/golang/etl/connectors:lib",
        "//src/shared/golang/etl/connectors/databases:lib",
        "//src/shared/golang/etl/types:lib",
    ],
)
